<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.xvello.salasana.MainActivity">

    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:paddingBottom="12dp"
        android:text="@string/intro_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_text"
        android:layout_marginBottom="15dp"
        android:text="@string/domain_hint_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/domain_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint_text"
        android:layout_alignParentStart="true"
        android:hint="@string/domain_edit"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/domain_edit"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/pass_edit"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/generate_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/pass_edit"
        android:layout_alignParentStart="true"
        android:onClick="generatePassword"
        android:text="@string/generate_button" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_edit"
        android:layout_alignParentEnd="true"
        android:onClick="resetForm"
        android:text="@string/reset_button" />

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="-60dp"
        android:layout_marginBottom="-200dp"
        android:alpha="0.1"
        android:contentDescription="Background image"
        android:src="@drawable/notification_icon"
        app:tint="@color/tintBackgroundImage" />

</RelativeLayout>
