<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.xvello.salasana.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:autoLink="web|email"
            android:nestedScrollingEnabled="false"
            android:text="@string/about_text1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/about_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autoLink="web|email"
            android:nestedScrollingEnabled="false"
            android:text="@string/about_text2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/about_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:nestedScrollingEnabled="false"
            android:text="@string/about_text3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</RelativeLayout>
